--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="robots" content="index, follow">
     <meta
       name="description"
       content="ISWC 2026 The 25th International Semantic Web Conference"
     />
+    <meta name="keywords" content="ISWC 2026, Semantic Web, Knowledge Graphs, Linked Data, AI Conference">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,6 +28,22 @@
     -->
     <title>ISWC 2026</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Event",
+          "name": "ISWC 2026 - International Semantic Web Conference",
+          "startDate": "2026-10-25",
+          "endDate": "2026-10-29",
+          "eventStatus": "https://schema.org/EventScheduled",
+          "location": {
+            "@type": "Place",
+            "name": "Bari, Italy"
+          },
+          "url": "https://iswc2026.semanticwe.org",
+          "description": "ISWC 2026 The 25th International Semantic Web Conference"
+        }
+</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
 
     <link
