--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="./favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="ISWC 2026 The 25th International Semantic Web Conference"/><link rel="apple-touch-icon" href="./logo192.png"/><link rel="manifest" href="./manifest.json"/><title>ISWC 2026</title><link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet"/><script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script><link rel="stylesheet" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"/><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"/><script defer="defer" src="./static/js/main.7a0271dc.js"></script><link href="./static/css/main.58f739c8.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="./favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="robots" content="index, follow"><meta name="description" content="ISWC 2026 The 25th International Semantic Web Conference"/><meta name="keywords" content="ISWC 2026, Semantic Web, Knowledge Graphs, Linked Data, AI Conference"><link rel="apple-touch-icon" href="./logo192.png"/><link rel="manifest" href="./manifest.json"/><title>ISWC 2026</title><link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet"/><script type="application/ld+json">{
+          "@context": "https://schema.org",
+          "@type": "Event",
+          "name": "ISWC 2026 - International Semantic Web Conference",
+          "startDate": "2026-10-25",
+          "endDate": "2026-10-29",
+          "eventStatus": "https://schema.org/EventScheduled",
+          "location": {
+            "@type": "Place",
+            "name": "Bari, Italy"
+          },
+          "url": "https://iswc2026.semanticwe.org",
+          "description": "ISWC 2026 The 25th International Semantic Web Conference"
+        }</script><script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script><link rel="stylesheet" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"/><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"/><script defer="defer" src="./static/js/main.7a0271dc.js"></script><link href="./static/css/main.58f739c8.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
