IFrame Card Metadata

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="robots" content="index, follow">
+    <meta property="og:title" content="ISWC 2026">
+    <meta property="og:description" content="ISWC 2026 The 25th International Semantic Web Conference">
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png">
+    <meta property="og:url" content="https://iswc2026.semanticweb.org">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="ISWC 2026 Logo">
+    <meta name="twitter:title" content="ISWC 2026">
+    <meta name="twitter:description" content="ISWC 2026 The 25th International Semantic Web Conference">
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo.png"> 
     <meta
       name="description"
       content="ISWC 2026 The 25th International Semantic Web Conference"
